[package]
name = "dream_go"
version = "0.5.0"
authors = ["Karl Sundequist Blomdahl <karl.sundequist.blomdahl@gmail.com>"]
license = "Apache-2.0"
publish = false

[features]
default = []

# print (a lot) of debug info during neural network evaluation to stderr
trace-cuda = []

# whether to enable tensor-cores in the cuDNN routines
tensor-core = []

# whether to enable use of DP4A in the cuDNN routines
dp4a = []

# dump all finished search tree's to stderr
trace-mcts = []

[profile.dev]
opt-level = 2
debug = true

[dependencies]
lazy_static = "1.0"
libc = "0.2"
ordered-float = "0.5"
rand = "0.4"
regex = "0.2"
rustyline = "1.0"
threadpool = "1.7"
time = "0.1"
