[package]
name = "dream_go"
version = "0.5.0"
authors = ["Karl Sundequist Blomdahl <karl.sundequist.blomdahl@gmail.com>"]
license = "Apache-2.0"
publish = false

[features]
default = []

# print (a lot) of debug info during neural network evaluation to stderr
trace-cuda = []

# whether to enable tensor-cores in the cuDNN routines
tensor-core = []

# dump all finished search tree's to stderr
trace-mcts = []

[profile.dev]
opt-level = 1
debug = true

[dependencies]
lazy_static = {version = "1.0", features = ["nightly"]}
libc = "0.2"
ordered-float = "0.5"
rand = "0.5"
regex = {version = "1.0", features = ["unstable"]}
time = "0.1"
