[package]
name = "dream_go"
version = "0.6.2"
authors = ["Karl Sundequist Blomdahl <karl.sundequist.blomdahl@gmail.com>"]
license = "Apache-2.0"
publish = false
build = "build.rs"

[features]
default = []

# print (a lot) of debug info during neural network evaluation to stderr
trace-cuda = []

# whether to enable tensor-cores in the cuDNN routines
tensor-core = []

# dump all finished search tree's to stderr
trace-mcts = []

[profile.bench]
debug = true

[profile.dev]
opt-level = 1
debug = true

[profile.release]
lto = true

[workspace]
members = ["contrib/go"]

[dependencies]
go = { path = "contrib/go" }
lazy_static = {version = "1.2", features = ["nightly"]}
libc = "0.2"
ordered-float = "1.0"
rand = "0.6"
regex = {version = "1.1", features = ["unstable"]}
time = "0.1"
