[package]
name = "dream_go"
version = "0.6.3"
authors = ["Karl Sundequist Blomdahl <karl.sundequist.blomdahl@gmail.com>"]
license = "Apache-2.0"
publish = false

[[bin]]
name = "dream_go"
path = "main.rs"

[dependencies]
dg_go = { path = "../libdg_go"}
dg_mcts = { path = "../libdg_mcts"}
dg_nn = { path = "../libdg_nn"}
dg_utils = { path = "../libdg_utils"}
cpu-time = "0.1"
lazy_static = {version = "1.2", features = ["nightly"]}
libc = "0.2"
regex = {version = "1.1", features = ["unstable"]}
