[package]
name = "dream_go"
version = "0.6.3"
authors = ["Karl Sundequist Blomdahl <karl.sundequist.blomdahl@gmail.com>"]
license = "Apache-2.0"
publish = false

[[bin]]
name = "dream_go"
path = "main.rs"

[dependencies]
cpu-time = "1.0"
crossbeam-channel = "0.5"
dg_go = { path = "../libdg_go"}
dg_mcts = { path = "../libdg_mcts"}
dg_predict = { path = "../libdg_predict"}
dg_utils = { path = "../libdg_utils"}
dg_sgf = { path = "../libdg_sgf"}
lazy_static = "1.4"
libc = "0.2"
regex = "1.4"
