[package]
name = "dg_tests"
version = "0.0.0"
authors = ["Karl Sundequist Blomdahl <karl.sundequist.blomdahl@gmail.com>"]
license = "Apache-2.0"
publish = false

[dependencies]
dg_go = { path = "../libdg_go"}
dg_graph = { path = "../libdg_graph"}
dg_mcts = { path = "../libdg_mcts"}
dg_utils = { path = "../libdg_utils"}
lazy_static = "1.3"
libc = "0.2"
rand = "0.6"
regex = {version = "1.1", features = ["unstable"]}
