[package]
name = "dg_tests"
version = "0.0.0"
authors = ["Karl Sundequist Blomdahl <karl.sundequist.blomdahl@gmail.com>"]
license = "Apache-2.0"
publish = false

[dependencies]
dg_cuda = { path = "../libdg_cuda"}
dg_go = { path = "../libdg_go"}
dg_mcts = { path = "../libdg_mcts"}
dg_nn = { path = "../libdg_nn"}
dg_utils = { path = "../libdg_utils"}
lazy_static = "1.4"
libc = "0.2"
rand = "0.7"
regex = "1.3"
