[package]
name = "dg_go"
version = "0.0.0"
authors = ["Karl Sundequist Blomdahl <karl.sundequist.blomdahl@gmail.com>"]
license = "Apache-2.0"
publish = false

[lib]
path = "lib.rs"
name = "dg_go"
crate-type = ["cdylib", "lib"]

[dependencies]
dg_utils = { path = "../libdg_utils" }
lazy_static = "1.4"
libc = "0.2"
memchr = "2.3"
rand = "0.8"
regex = "1.4"
ordered-float = "2.0"
