[package]
name = "dg_graph"
version = "0.0.0"
authors = ["Karl Sundequist Blomdahl <karl.sundequist.blomdahl@gmail.com>"]
license = "Apache-2.0"
publish = false

[lib]
path = "lib.rs"
name = "dg_graph"
crate-type = ["lib"]

[dependencies]
dg_cuda = { path = "../libdg_cuda" }
dg_go = { path = "../libdg_go" }
dg_utils = { path = "../libdg_utils" }
fnv = "1.0"
lazy_static = "1.3"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rand = "0.6"
