[package]
name = "dg_mcts"
version = "0.0.0"
authors = ["Karl Sundequist Blomdahl <karl.sundequist.blomdahl@gmail.com>"]
license = "Apache-2.0"
publish = false

[lib]
path = "lib.rs"
name = "dg_mcts"
crate-type = ["lib"]

[features]
trace-mcts = []  # dump all finished search tree's to stderr

[dependencies]
crossbeam-channel = "0.3"
crossbeam-utils = "0.6"
dg_cuda = { path = "../libdg_cuda" }
dg_go = { path = "../libdg_go" }
dg_graph = { path = "../libdg_graph"}
dg_utils = { path = "../libdg_utils" }
lazy_static = "1.3"
ordered-float = "1.0"
rand = "0.6"
thread_local = "0.3"
time = "0.1"
