[package]
name = "dg_mcts"
version = "0.0.0"
authors = ["Karl Sundequist Blomdahl <karl.sundequist.blomdahl@gmail.com>"]
license = "Apache-2.0"
publish = false

[lib]
path = "lib.rs"
name = "dg_mcts"
crate-type = ["lib"]

[features]
trace-mcts = []  # dump all finished search tree's to stderr

[dependencies]
crossbeam-channel = "0.4"
crossbeam-utils = "0.7"
dg_cuda = { path = "../libdg_cuda" }
dg_go = { path = "../libdg_go" }
dg_nn = { path = "../libdg_nn" }
dg_utils = { path = "../libdg_utils" }
lazy_static = "1.4"
ordered-float = "1.0"
rand = { version = "0.7", features = ["small_rng"] }
rand_distr = "0.2"
time = "0.1"
