[package]
name = "dg_mcts"
version = "0.0.0"
authors = ["Karl Sundequist Blomdahl <karl.sundequist.blomdahl@gmail.com>"]
license = "Apache-2.0"
publish = false

[lib]
path = "lib.rs"
name = "dg_mcts"
crate-type = ["lib"]

[features]
trace-mcts = []  # dump all finished search tree's to stderr

[dependencies]
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
concurrent-queue = "1.2"
dg_cuda = { path = "../libdg_cuda" }
dg_go = { path = "../libdg_go" }
dg_predict = { path = "../libdg_predict" }
dg_sgf = { path = "../libdg_sgf" }
dg_utils = { path = "../libdg_utils" }
lazy_static = "1.4"
ordered-float = "2.0"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
time = "0.1"
