[package]
name = "dg_nn"
version = "0.0.0"
authors = ["Karl Sundequist Blomdahl <karl.sundequist.blomdahl@gmail.com>"]
license = "Apache-2.0"
publish = false

[features]
trace-cuda = []  # print (a lot) of debug info during neural network evaluation to stderr

[lib]
path = "lib.rs"
name = "dg_nn"
crate-type = ["lib"]

[dependencies]
crossbeam-channel = "0.5"
dashmap = "5.1"
dg_cuda = { path = "../libdg_cuda" }
dg_go = { path = "../libdg_go" }
dg_utils = { path = "../libdg_utils" }
libc = "0.2"
