[package]
name = "dg_predict"
version = "0.0.0"
authors = ["Karl Sundequist Blomdahl <karl.sundequist.blomdahl@gmail.com>"]
license = "Apache-2.0"
publish = false

[lib]
path = "lib.rs"
name = "dg_predict"
crate-type = ["lib"]

[dependencies]
dg_cuda = { path = "../libdg_cuda" }
dg_utils = { path = "../libdg_utils" }
