[package]
name = "dg_sgf"
version = "0.0.0"
authors = ["Karl Sundequist Blomdahl <karl.sundequist.blomdahl@gmail.com>"]
license = "Apache-2.0"
publish = false

[lib]
path = "lib.rs"
name = "dg_sgf"
crate-type = ["lib"]

[dependencies]
dg_go = { path = "../libdg_go"}
lazy_static = "1.4"
regex = "1.4"
memchr = "2.3"
